сделал дз: Добавить в user-service поддержку Spring и разработать API, которое позволит управлять данными.
Использовать необходимые модули spring(boot, web, data etc).
Реализовать api для получения, создания, обновления и удаления юзера. Важно, entity не должен возвращаться из контроллера, необходимо использовать dto.
Заменить Hibernate на Spring data JPA.
Написать тесты для API(можно делать это при помощи mockMvc или других средств)